<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/gap_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_size"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/computer_text"
                android:textSize="@dimen/name_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/player_text"
                android:textSize="@dimen/name_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/gap_size"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textScoreComputer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/default_score"
                android:textColor="@color/score_default_color"
                android:textSize="@dimen/score_size" />

            <TextView
                android:id="@+id/textScorePlayer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/default_score"
                android:textColor="@color/score_default_color"
                android:textSize="@dimen/score_size" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageComputer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description"
            android:scaleType="centerInside" />

        <ImageView
            android:id="@+id/imagePlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description"
            android:scaleType="centerInside" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/gap_size"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonRock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_rock_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonPaper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonPaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_paper_text"
                app:layout_constraintBottom_toBottomOf="@+id/buttonRock"
                app:layout_constraintEnd_toStartOf="@+id/buttonScissors"
                app:layout_constraintStart_toEndOf="@+id/buttonRock"
                app:layout_constraintTop_toTopOf="@+id/buttonRock" />

            <Button
                android:id="@+id/buttonScissors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_scissor_text"
                app:layout_constraintBottom_toBottomOf="@+id/buttonRock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonPaper"
                app:layout_constraintTop_toTopOf="@+id/buttonRock" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/start_text"
        android:textColor="@color/start_color"
        android:textSize="@dimen/start_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
